# HPC

./: AMAZON_DATASET_GUIDE.md  CMakeLists.txt  Makefile  PHASE1_README.md  README.md  amazon_main.cpp  amazon_openmp.cpp  build.bat  build.ps1  core.cpp  core.h  download_amazon_dataset.py  main  main.cpp  openmp  openmp.cpp  openmp_rec  openmp_recommender.c  parallel.cpp  parallel.h  phase1_serial  phase1_serial.cpp  phase2a_openmp  phase2a_openmp.cpp  ratings.csv  recommendation.cpp  recommendation_openmp.cpp  recommendation_openmp.h  serial.cpp  serial_exe  serial_rec  serial_recommender.c
